# trump-truth-social-data-analysis

./: .gitignore  analysis.ipynb  pyproject.toml  sleep.ipynb
